Fix Question View on Mobile and bug fixes

--- a/assets/quiz-custom.scss
+++ b/assets/quiz-custom.scss
@@ -569,6 +569,31 @@
     }
 }
 @media (max-width: 798px) {
+    .page.page-default {
+        padding-top: 0;
+        padding-bottom: 0;
+    }
+    #quizProgressBar {
+        margin: 0;
+        padding: 0;
+    }
+    .question-heading, .question-subheading {
+        font-size: 12px;
+        color: #272C2F;
+    }
+    // .question-heading {
+    //     margin: 0;
+    // }
+    .question-subheading {
+        margin-top: -20px;
+    }
+    .btn--quiz {
+        margin: 6px;
+    }
+    .range-emoticon {
+        max-width: 100px;
+        margin: 25px auto;
+    }
     .container.section-cover {
         .page.page-default .asset-wrapper.swiper-wrapper .swiper-wrapper .swiper-slide-active .slide-inner {
             background-position: left;
